--- a/arch/arm64/configs/mokee_santoni_defconfig
+++ b/arch/arm64/configs/mokee_santoni_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-lineageos"
+CONFIG_LOCALVERSION="-mokee"
 # CONFIG_USELIB is not set
 CONFIG_AUDIT=y
 CONFIG_NO_HZ=y
@@ -41,7 +41,7 @@ CONFIG_PARTITION_ADVANCED=y
 # CONFIG_IOSCHED_TEST is not set
 CONFIG_IOSCHED_BFQ=y
 CONFIG_CGROUP_BFQIO=y
-CONFIG_MACH_XIAOMI_LAND=y
+CONFIG_MACH_XIAOMI_SANTONI=y
 CONFIG_PCI_MSM=y
 CONFIG_SCHED_MC=y
 CONFIG_PREEMPT=y
@@ -418,6 +418,7 @@ CONFIG_SND=y
 CONFIG_SND_USB_AUDIO=y
 CONFIG_SND_SOC=y
 CONFIG_SND_SOC_MSM8X16=y
+CONFIG_SND_SOC_AW87319=y
 CONFIG_HIDRAW=y
 CONFIG_UHID=y
 CONFIG_HID_APPLE=y
